# NUST-MISIS-CPP-Course

./: README.md
coursework/doc/: Doxyfile
coursework/doc/html/: _datamuse_a_p_i_8h_source.html  _main_window_8h_source.html  _settings_wrapper_8hpp_source.html  _word_representer_8hpp_source.html  annotated.html  class_datamuse_a_p_i-members.html  class_datamuse_a_p_i.html  class_main_window-members.html  class_main_window.html  class_settings_wrapper-members.html  class_settings_wrapper.html  class_word_representer-members.html  class_word_representer.html  classes.html  dir_11bc0974ce736ce9a6fadebbeb7a8314.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html
coursework/doc/rtf/: _datamuse_a_p_i_8h_source.rtf  _main_window_8h_source.rtf  _settings_wrapper_8hpp_source.rtf  _word_representer_8hpp_source.rtf  refman.rtf
coursework/src/: CMakeLists.txt
coursework/src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
coursework/src/gui/resources/: resources.qrc
coursework/src/gui/resources/styles/: light.qss  night.qss
coursework/src/lib/: CMakeLists.txt  DatamuseAPI.cpp  DatamuseAPI.h  SettingsWrapper.hpp  WordRepresenter.hpp
labs/: CMakeLists.txt
labs/prj.lab/: CMakeLists.txt
labs/prj.lab/complex/: complex.cpp  complex.h
labs/prj.lab/dynarray/: dynarray.cpp  dynarray.h
labs/prj.lab/matrixa/: matrixa.cpp  matrixa.h
labs/prj.lab/matrixl/: matrixl.cpp  matrixl.h
labs/prj.lab/ortogeo/: CMakeLists.txt
labs/prj.lab/ortogeo/orto_rectangle/: CMakeLists.txt  rectangle.cpp  rectangle.h
labs/prj.lab/ortogeo/orto_segm/: CMakeLists.txt  segm.cpp  segm.h
labs/prj.lab/queuea/: queuea.cpp  queuea.h
labs/prj.lab/queuel/: queuel.cpp  queuel.h
labs/prj.lab/rational/: rational.cpp  rational.h
labs/prj.lab/stacka/: stacka.cpp  stacka.h
labs/prj.lab/stackl/: stackl.cpp  stackl.h
labs/prj.test/: CMakeLists.txt
labs/prj.test/catch2_complex/: CMakeLists.txt  catch2_complex.cpp
labs/prj.test/catch2_dynarray/: CMakeLists.txt  catch2_dynarray.cpp
labs/prj.test/catch2_matrixa/: CMakeLists.txt  catch2_matrixa.cpp
labs/prj.test/catch2_rational/: CMakeLists.txt  catch2_rational.cpp
labs/prj.test/catch2_stackl/: CMakeLists.txt  catch2_stackl.cpp
labs/prj.thirdparty/catch2/: catch.hpp
